  - capture - standardize on config error process exiting
  - tests - add some auth tests to test suite
  - viewer - jquery upgrade
  - viewer - help fields display improvements
  - viewer - support https urls in wise plugin (issue #1777)
  - viewer - fix history links with && not working
  - viewer - userAuthCreateTmpl improvements
  - viewer - fix cron and database bounding queries

3.1.1 2021/10/13
  - release - node 14.18.1
  - addUser.js - fix not exiting on complete when certs defined
  - all - deal with usersElasticsearch being an array better
  - capture - increase max of pcapWriteSize, tpacketv3NumThreads
  - capture - decrease max of maxESConns, maxESRequests
  - viewer - fix vlan display (broke in 3.0.0)
  - viewer - Issue Query on Page Load "No" option changed to issue query if there is a search expression
  - viewer - fix position of value actions dropdown in spigraph table
  - wise - fix error msg about redundant parameters
  - wise - new mergeQuery setting for splunk

3.1.0 2021/10/04
  - all - support float field type
  - all - support Q-in-Q ether type
  - all - --insecure has consistent messaging now
  - all - Finally added elasticsearchBasicAuth/usersElasticsearchBasicAuth can be
          user:pass or base64(user:pass)
  - capture - s3 writer uses IMDSv2 (thanks fj604)
  - capture - dscp src/dst (issue #1626)
  - capture - refactor how udp tunnels are added, just normal parsers now
  - capture - initial GENEVE, VXLAN-GPE support
  - capture - initial IETF QUIC support
  - capture - fix interfaceOps crash (issue #1763)
  - release - much improved arkime_config_interfaces.sh (thanks arkaØm)
  - release - node 14.18.0
  - viewer - stop upload menu showing up when empty command
  - viewer - improve first load time by spliting bundle and lazy load items
  - viewer - combine multiple calls from UI into one call
  - viewer - added pcap expire debugging
  - viewer - uploadCommand can now use INSECURE-ORIGINALNAME to access uploaded filename